; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_da7218.c_da7218_of_micbias_lvl.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_da7218.c_da7218_of_micbias_lvl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_component = type { i32 }

@DA7218_MICBIAS_1_2V = common dso_local global i32 0, align 4
@DA7218_MICBIAS_1_6V = common dso_local global i32 0, align 4
@DA7218_MICBIAS_1_8V = common dso_local global i32 0, align 4
@DA7218_MICBIAS_2_0V = common dso_local global i32 0, align 4
@DA7218_MICBIAS_2_2V = common dso_local global i32 0, align 4
@DA7218_MICBIAS_2_4V = common dso_local global i32 0, align 4
@DA7218_MICBIAS_2_6V = common dso_local global i32 0, align 4
@DA7218_MICBIAS_2_8V = common dso_local global i32 0, align 4
@DA7218_MICBIAS_3_0V = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Invalid micbias level\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_component*, i32)* @da7218_of_micbias_lvl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @da7218_of_micbias_lvl(%struct.snd_soc_component* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_soc_component*, align 8
  %5 = alloca i32, align 4
  store %struct.snd_soc_component* %0, %struct.snd_soc_component** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %25 [
    i32 1200, label %7
    i32 1600, label %9
    i32 1800, label %11
    i32 2000, label %13
    i32 2200, label %15
    i32 2400, label %17
    i32 2600, label %19
    i32 2800, label %21
    i32 3000, label %23
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* @DA7218_MICBIAS_1_2V, align 4
  store i32 %8, i32* %3, align 4
  br label %31

9:                                                ; preds = %2
  %10 = load i32, i32* @DA7218_MICBIAS_1_6V, align 4
  store i32 %10, i32* %3, align 4
  br label %31

11:                                               ; preds = %2
  %12 = load i32, i32* @DA7218_MICBIAS_1_8V, align 4
  store i32 %12, i32* %3, align 4
  br label %31

13:                                               ; preds = %2
  %14 = load i32, i32* @DA7218_MICBIAS_2_0V, align 4
  store i32 %14, i32* %3, align 4
  br label %31

15:                                               ; preds = %2
  %16 = load i32, i32* @DA7218_MICBIAS_2_2V, align 4
  store i32 %16, i32* %3, align 4
  br label %31

17:                                               ; preds = %2
  %18 = load i32, i32* @DA7218_MICBIAS_2_4V, align 4
  store i32 %18, i32* %3, align 4
  br label %31

19:                                               ; preds = %2
  %20 = load i32, i32* @DA7218_MICBIAS_2_6V, align 4
  store i32 %20, i32* %3, align 4
  br label %31

21:                                               ; preds = %2
  %22 = load i32, i32* @DA7218_MICBIAS_2_8V, align 4
  store i32 %22, i32* %3, align 4
  br label %31

23:                                               ; preds = %2
  %24 = load i32, i32* @DA7218_MICBIAS_3_0V, align 4
  store i32 %24, i32* %3, align 4
  br label %31

25:                                               ; preds = %2
  %26 = load %struct.snd_soc_component*, %struct.snd_soc_component** %4, align 8
  %27 = getelementptr inbounds %struct.snd_soc_component, %struct.snd_soc_component* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @dev_warn(i32 %28, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %30 = load i32, i32* @DA7218_MICBIAS_1_6V, align 4
  store i32 %30, i32* %3, align 4
  br label %31

31:                                               ; preds = %25, %23, %21, %19, %17, %15, %13, %11, %9, %7
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @dev_warn(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
